fix messaging scrollbar bug, add tails to messages (yay), improve mobile scrolling

--- a/app/assets/stylesheets/matches.css.scss
+++ b/app/assets/stylesheets/matches.css.scss
@@ -37,6 +37,7 @@
 /* Chat Widget
 ================== */
 .message-widget {
+	-webkit-overflow-scrolling: touch;
   margin: 0 auto;
   background-color: #fff;
 	height: 80vh;
@@ -53,6 +54,7 @@
 	margin-right:-13px;
 }
 .activity-stream { 
+	position: relative;
 	list-style: none; 
 	overflow: scroll;
 	overflow-x: hidden; 
@@ -82,19 +84,19 @@
   background: #e5e5ea;
   max-width: 75%;
 	
-	&:before {
-    // border-color: #E5E4E9;
-    // border-radius: 0 200% 0 50%;
-    // border-style: solid;
-    // border-width: 0 20px;
-    // bottom: 0;
-    // clip-path: rect(0 20px, 0 35px, 0 42px, 0 0);
-    // content: " ";
-    // height: 40px;
-    // position: absolute;
-    // width: 30px;
-    // left: -50px;
-    // transform: rotateY(180deg);
+	&:before{
+		display: block;
+		position: absolute;
+		content: "";
+		width: 21px;
+		height: 16px;
+		left: -11px;
+		bottom: -2px;
+		transform: rotateY(173deg);
+		border-radius: 50%;
+		background: transparent;
+		border-right: 8px solid transparent;
+		border-left: 8px solid #e5e5ea;
 	}
 }
 .activity.currentUserMessage {
@@ -103,9 +105,11 @@
   color: white;
   
   &:before {
-    // border-color: #227FBB;
-    // right: -3px;
-    // transform: rotateY(180deg);
+		left: initial;
+		right: -2px;
+		transform: rotate(-12deg);
+		margin-right: -11px;
+		border-left: 8px solid #227FBB;
   }
 }
 .activity-row {
